--- a/Voron.Tests/Voron.Tests.csproj
+++ b/Voron.Tests/Voron.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Bugs\PageTableIssue.cs" />
     <Compile Include="Bugs\RecoveryMultipleJournals.cs" />
     <Compile Include="Bugs\RecoveryWithManualFlush.cs" />
+    <Compile Include="Bugs\RequiredPrefixWithSeekBeforeAllKeys.cs" />
     <Compile Include="Bugs\Snapshots.cs" />
     <Compile Include="Bugs\Deletes.cs" />
     <Compile Include="Bugs\EmptyTree.cs" />
